// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Render in disabled state 1`] = `
<div
  class="singleAutoComplete"
>
  <div
    class="input default left disabled"
  >
    <div
      class="prependedContainer default"
    >
      <div
        class="spinner"
        style="width:20px;height:20px"
      >
        <div
          class="doubleBounce1"
        />
        <div
          class="doubleBounce2"
        />
      </div>
    </div>
    <input
      autocomplete="off"
      class="mousetrap"
      disabled=""
      type="text"
      value="James Bond"
    />
  </div>
</div>
`;

exports[`Render with value of given SingleSelectionStore 1`] = `
<div
  class="singleAutoComplete"
>
  <div
    class="input default left"
  >
    <div
      class="prependedContainer default"
    >
      <div
        class="spinner"
        style="width:20px;height:20px"
      >
        <div
          class="doubleBounce1"
        />
        <div
          class="doubleBounce2"
        />
      </div>
    </div>
    <input
      autocomplete="off"
      class="mousetrap"
      type="text"
      value="James Bond"
    />
  </div>
</div>
`;
